--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,16 +9,36 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-    <header>
-      <ul class="hmenu">
-        <%= link_to('Home', :root) %>
-        <%= render 'devise/menu/registration_items' %>
-        <%= render 'devise/menu/login_items' %>
-        <%= render 'shopping_carts/shopping_cart' %>
-      </ul>
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-    </header>
-    <%= yield %>
+    <div class ="container">
+      <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+          <a class="navbar-brand" href = 'http://localhost:3000'> TicketTopia
+          </a>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <li class="nav-item"><span class ="nav-link"> <%= render 'devise/menu/registration_items' %></span></li>
+              <li class="nav-item"><span class ="nav-link"> <%= render 'shopping_carts/shopping_cart' %></span></li>
+              <li class="nav-item"><span class ="nav-link"> <%= render 'devise/menu/login_items' %></span></li>
+              <li class="nav-item"><span class ="nav-link"> <%= render 'devise/menu/logout_items' %></span></li>
+            </div>
+          </div>
+        </nav>
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
+      </header>
+
+      
+      <div class="container">
+        <div class="row justify-content-md-center">
+          <div class="col col-lg-2">
+          </div>
+          <div class="col-md-auto">
+            <%= yield %>
+          </div>
+          <div class="col col-lg-2">
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
