--- a/app/views/shopping_carts/_shopping_cart.html.erb
+++ b/app/views/shopping_carts/_shopping_cart.html.erb
@@ -1,5 +1,6 @@
 <% if can? :create, Order %>
 <li>
-  <%=link_to('Cart', '/shopping_cart') %> (<%=shopping_cart_how_many_tickets()%>)
+  <%=link_to('Cart', '/shopping_cart') %> 
+
 </li>
 <% end %>
