--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the Events controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.round-image-50 {
+    background-color: white;
+    border: 1px solid #d9d9d9;
+    height: 300px;
+    width: 300px;
+    overflow: hidden;
+    text-align: center;
+    img { width: 100% }
+}
