--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @event, local: true) do |form| %>
+<%= form_with(model: @event, local: true, html: { multipart: true } ) do |form| %>
   <% if event.errors.any? %>
     <% console %>
     <div id="error_explanation">
@@ -11,16 +11,21 @@
     </div>
   <% end %>
 
-  <%= form.label :name %>
+  <strong><%= form.label :name %></strong><br>
   <%= form.text_field :name %>
-  <%= form.label :description %>
-  <%= form.text_area :description, cols: 60, rows: 10 %>
-  <%= form.label :start_date %>
-  <%= date_select :event, :start_date %>
-  <%= form.label :event_venue_id %>
-  <%= form.select(:event_venue_id, options_from_collection_for_select(EventVenue.all, :id, :name))%>
+  <strong><br><br><%= form.label :description %><br></strong>
+  <%= form.text_area :description, cols: 60, rows: 10 %><br>
+
+  <strong><%= form.label :start_date %><br></strong>
+  <%= date_select :event, :start_date %><br><br>
+
+  <strong><%= form.label :event_venue_id %><br></strong>
+  <%= form.select(:event_venue_id, options_from_collection_for_select(EventVenue.all, :id, :name))%><br><br>
+
+  <strong>Seleccione una imagen</strong><br>
+  <%= form.file_field :avatar %><br>
 
   <div class="actions">
-    <%= form.submit %>
+    <br><%= form.submit %>
   </div>
 <% end %>
