--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -13,12 +13,12 @@
     <% @events.each do |event| %>
       <tr>
         <td><%= event.name %></td>
-        <td><%= event.description %></td>
+        <td><%= event.description %></td><
         <td><%= link_to 'Show', event %></td>
         <td><%= link_to 'Edit', edit_event_path(event) %></td>
         <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    <% end %>z
+    <% end %>
   </tbody>
 </table>
 
