--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,10 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light ">
           <a class="navbar-brand" href = 'http://localhost:3000'> TicketTopia
           </a>
+
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
+              <li><a href="http://localhost:3000/events">Events</a></li>
               <li class="nav-item"><span class ="nav-link"> <%= render 'devise/menu/registration_items' %></span></li>
               <li class="nav-item"><span class ="nav-link"> <%= render 'shopping_carts/shopping_cart' %></span></li>
               <li class="nav-item"><span class ="nav-link"> <%= render 'devise/menu/login_items' %></span></li>
