--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,21 +7,37 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
   </head>
   <body>
     <div class ="container">
       <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light ">
-          <a class="navbar-brand" href = 'http://localhost:3000'> TicketTopia
-          </a>
+          <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2" >
+            <a class="navbar-brand" href = 'http://localhost:3000'> TicketTopia
+            </a>
 
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <li><a href="http://localhost:3000/events">Events</a></li>
+
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="http://localhost:3000/events">Events</a>
+              </li>
+
+
+
+
+            </ul>
+          </div>
+
+          <div class="navbar-collapse collapse w-100 order-3 dual-collapse2" >
+            <div class="navbar-nav ml-auto">
+
+
               <li class="nav-item"><span class ="nav-link"> <%= render 'devise/menu/registration_items' %></span></li>
               <li class="nav-item"><span class ="nav-link"> <%= render 'shopping_carts/shopping_cart' %></span></li>
               <li class="nav-item"><span class ="nav-link"> <%= render 'devise/menu/login_items' %></span></li>
               <li class="nav-item"><span class ="nav-link"> <%= render 'devise/menu/logout_items' %></span></li>
+
             </div>
           </div>
         </nav>
