--- a/app/views/shopping_carts/index.html.erb
+++ b/app/views/shopping_carts/index.html.erb
@@ -1,12 +1,39 @@
 <p>The contents of your shopping cart are as follows:</p>
 
 <ul>
-<%shopping_cart_get_tickets().each do |k,v| %>
-  <li><%=TicketType.find(k).event.name%>, <%=TicketType.find(k).event.start_date.in_time_zone()%>, <%=TicketType.find(k).ticket_zone.zone%>, <%=TicketType.find(k).price%>, <%=v%></li>
-<%end%>
+	<table>
+	  <thead>
+	    <tr>
+	      <th>Event</th>
+	      <th>Date</th>
+	      <th>Ticket</th>
+	      <th>Price   </th>
+	      <th>Amount</th>
+	      <th>Action</th>
+	    </tr>
+	  </thead>
+
+	  <tbody>
+	    <% shopping_cart_get_tickets().each do |k,v|%>
+	      <tr>
+	        <td><%= TicketType.find(k).event.name %></td>
+	        <td><%= TicketType.find(k).event.start_date.in_time_zone() %></td>
+	        <td><%= TicketType.find(k).ticket_zone.zone %></td>
+	        <td><%= TicketType.find(k).price %></td>
+	        <td><%= v %></td>
+	        <td> <%= link_to 'http://localhost:3000/shopping_cart/remove/'+ k.to_s, method: :delete,
+                    data: { confirm: 'Are you sure you want to remove this ticket?' } do %>
+                  <span>Remove</span>
+                <% end %></td>
+	      </tr>
+	    <% end %>
+	  </tbody>
+	</table>
+
 </ul>
 
-<%= link_to 'Back', :back %>
+<%= link_to 'Back', :back %> |
+<%= link_to 'Checkout', 'http://localhost:3000/shopping_cart/checkout' %>
 
 <!-- TODO: remove items from cart -->
 <!-- TODO: button for placing order -->
