--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,10 @@
                 <a class="nav-link" href="http://localhost:3000/events">Events</a>
               </li>
 
+              <li class="nav-item">
+                <a class="nav-link" href="http://localhost:3000/ticket_types">Ticket Types</a>
+              </li>
+
 
 
 
