--- a/app/views/shopping_carts/index.html.erb
+++ b/app/views/shopping_carts/index.html.erb
@@ -18,7 +18,7 @@
 	      <tr>
 	        <td><%= TicketType.find(k).event.name %></td>
 	        <td><%= TicketType.find(k).event.start_date.in_time_zone() %></td>
-	        <td><%= TicketType.find(k).ticket_zone.zone %></td>
+	        <td><%= TicketZone.find(TicketType.find(k).ticket_zone_id).zone %></td>
 	        <td><%= TicketType.find(k).price %></td>
 	        <td><%= v %></td>
 	        <td> <%= link_to 'http://localhost:3000/shopping_cart/remove/'+ k.to_s, method: :delete,
