--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -15,13 +15,17 @@
         <td><%= event.name %></td>
         <td><%= event.description %></td>
         <td><%= link_to 'Show', event %></td>
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <%if can? :edit, Event%>
+          
+          <td><%= link_to 'Edit', edit_event_path(event) %></td>
+          <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <%end%>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Event', new_event_path %>
+<%if can? :edit, Event%>
+  <%= link_to 'New Event', new_event_path %>
+<% end %>
